qbs (1.4.1+dfsg-8) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 07 Aug 2015 21:30:06 +0300

qbs (1.4.1+dfsg-7) unstable; urgency=medium

  * Skip homeDirectory test because buildds do not have home directory
    (skip_test_homedirectory.diff).

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 18 Jul 2015 21:18:43 +0300

qbs (1.4.1+dfsg-6) unstable; urgency=medium

  * Simplify testing commands: no need to pass --settings-dir because
    we export XDG_CONFIG_HOME anyway.
  * Define qbs_enable_unit_tests to enable some additional tests.
    - Add some new symbols that appeared after enabling it.
  * Move tests whitelist logic to auto.pro, so that non-API tests are
    still run on non-whitelisted architectures.
  * Talk to FreeBSD kernel manually instead of using kinfo_getproc,
    which is not available on GNU/kFreeBSD.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 18 Jul 2015 19:38:23 +0300

qbs (1.4.1+dfsg-5) experimental; urgency=medium

  * Fixup the previous kFreeBSD fix; add B-D on libutil-freebsd-dev.
  * Use a whitelist of architectures where we run tests, until QBS
    gets ported away from QtScript.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 13 Jul 2015 13:20:21 +0300

qbs (1.4.1+dfsg-4) experimental; urgency=medium

  * Add missing includes for kinfo_getproc(3) on kFreeBSD
    (bsd_includes.diff).
  * Disable one more test (infinite-loop-js) failing because of QtScript
    bugs to make the build pass on powerpc. Rename the patch from
    disable_moc_hpp_included.diff to disable_tests_qtscript.diff.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 12 Jul 2015 17:08:33 +0300

qbs (1.4.1+dfsg-3) experimental; urgency=medium

  * Backport upstream change to run testAssembly only on architectures
    where it is supported (fix_assembly_test.diff).
  * Replace revert_tests_speedup.diff with proposed upstream version
    by Christian Kandeler.