@@ -28,7 +28,9 @@ override_dh_auto_configure:
 		QMAKE_CFLAGS+="${CFLAGS} ${CPPFLAGS}" \
 		QMAKE_CXXFLAGS+="${CXXFLAGS} ${CPPFLAGS}" \
 		QMAKE_LFLAGS+="${LDFLAGS}" \
-		QBS_INSTALL_PREFIX=/usr
+		QBS_INSTALL_PREFIX=/usr \
+		QBS_LIB_INSTALL_DIR=/usr/lib/${DEB_HOST_MULTIARCH} \
+		QBS_PLUGINS_INSTALL_DIR=/usr/lib/${DEB_HOST_MULTIARCH}/qbs/plugins
 
 override_dh_auto_build-indep:
 	dh_auto_build -- docs
@@ -39,14 +41,6 @@ override_dh_auto_install-indep:
 	# Remove empty directories
 	rmdir $(CURDIR)/debian/tmp/usr/share/doc/qbs/html/images/used-in-examples/
 	rmdir $(CURDIR)/debian/tmp/usr/share/doc/qbs/html/scripts/
-
-override_dh_auto_install-arch:
-	dh_auto_install
-
-	# Move libraries to Multi-Arch locations
-	mkdir -p $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)
-	mv $(CURDIR)/debian/tmp/usr/lib/*.so* $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/
-	mv $(CURDIR)/debian/tmp/usr/lib/qbs $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/
 
 override_dh_auto_test:
 	mkdir -p $(CONFIG_DIR)/QtProject
